# passly

./: .SRCINFO  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  PKGBUILD  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aur-update.yml  code_quality.yml  pypi.yml  test.yml
aur/: .SRCINFO  PKGBUILD
src/passly/: cli.py  config.py  main.py  output.py  utils.py
src/passly/checks/: __init__.py  base.py  duplicates.py  multi_accounts.py
src/passly/parsers/: __init__.py  base.py  bitwarden.py
tests/: test_duplicates.py  test_multi_accounts.py
tests/parser_tests/: test_bitwarden.py
